tests/snapshots/render__mermaid_japanese_80.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/mermaid/japanese.md\", \"80\")"
---
# 日本語ラベル
────────────────────────────────────────────────────────────────────────────────

╭─ mermaid
│ ┌──────┐     ┌──────────┐     ┌──────┐
│ │      │     │          │     │      │
│ │ 開始   ├────►│ レビュー     ├────►│ 完了   │
│ │      │     │          │     │      │
│ └──────┘     └──────────┘     └──────┘
╰─
