tests/snapshots/render__mermaid_mode_ascii.snap
---
source: tests/render.rs
expression: "plain_with(\"tests/fixtures/mermaid/sequence.md\", \"80\", &\n[\"--mermaid\", \"ascii\"])"
---
# Sequence
────────────────────────────────────────────────────────────────────────────────

╭─ mermaid
│ +-------+     +-----+
│ | Alice |     | Bob |
│ +---+---+     +--+--+
│     |            |
│     | Request review
│     +----------->|
│     |            |
│     | Approved   |
│     |<...........+
│     |            |
╰─
