tests/snapshots/render__mermaid_mode_off.snap
---
source: tests/render.rs
expression: "plain_with(\"tests/fixtures/mermaid/sequence.md\", \"80\", & [\"--mermaid\", \"off\"])"
---
# Sequence
────────────────────────────────────────────────────────────────────────────────

[mermaid diagram omitted]
