tests/snapshots/render__mermaid_mode_source.snap
---
source: tests/render.rs
expression: "plain_with(\"tests/fixtures/mermaid/sequence.md\", \"80\", &\n[\"--mermaid\", \"source\"])"
---
# Sequence
────────────────────────────────────────────────────────────────────────────────

╭─ mermaid (source)
│ sequenceDiagram
│   Alice->>Bob: Request review
│   Bob-->>Alice: Approved
╰─
