tests/snapshots/render__mermaid_sequence_80.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/mermaid/sequence.md\", \"80\")"
---
# Sequence
────────────────────────────────────────────────────────────────────────────────

╭─ mermaid
│ ┌───────┐     ┌─────┐
│ │ Alice │     │ Bob │
│ └───┬───┘     └──┬──┘
│     │            │
│     │ Request review
│     ├───────────►│
│     │            │
│     │ Approved   │
│     │◄┈┈┈┈┈┈┈┈┈┈┈┤
│     │            │
╰─
