tests/snapshots/render__mermaid_state_80.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/mermaid/state.md\", \"80\")"
---
# State diagram
────────────────────────────────────────────────────────────────────────────────

╭─ Mermaid diagram not supported as text ───────────────────────────────────────
│ ASCII rendering does not support diagram type `state`
├───────────────────────────────────────────────────────────────────────────────
│ stateDiagram-v2
│   [*] --> Draft
│   Draft --> Review
│   Review --> Published
│   Published --> [*]
╰───────────────────────────────────────────────────────────────────────────────
