tests/snapshots/render__mermaid_unsupported_80.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/mermaid/unsupported.md\", \"80\")"
---
# Unsupported family
────────────────────────────────────────────────────────────────────────────────

stateDiagram-v2 has no terminal text renderer, so the source is shown.

╭─ Mermaid diagram not supported as text ───────────────────────────────────────
│ ASCII rendering does not support diagram type `state`
├───────────────────────────────────────────────────────────────────────────────
│ stateDiagram-v2
│   [*] --> Draft
│   Draft --> Published
│   Published --> [*]
╰───────────────────────────────────────────────────────────────────────────────
